<resources>
    <string name="app_name">ROP</string>
    <string name="title_activity_add_page">AddPage</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string-array name="fuel_types">
        <item>Diesel</item>
        <item>Gasoline</item>
        <item>Electric</item>
        <item>LPG</item>
        <item>Diesel/Electric</item>
        <item>Gasoline/Electric</item>
    </string-array>
    <string name="title_activity_my_car">MyCar</string>

    <string-array name="fuel_types_hybrid">
        <item>Diesel</item>
        <item>Gasoline</item>
        <item>Electric</item>
    </string-array>

    <string-array name="expense_types">
        <item>Accessories</item>
        <item>Insurance</item>
        <item>Spare parts</item>
        <item>Tax</item>
        <item>Other</item>
    </string-array>

    <string-array name="service_types">
        <item>Car Wash</item>
        <item>Change Tires</item>
        <item>Engine Oil</item>
        <item>Inspection</item>
        <item>Other service</item>
    </string-array>

    <string-array name="filter_options">
        <item>All</item>
        <item>Refuel</item>
        <item>Odometer</item>
        <item>Expenses</item>
        <item>Service</item>
    </string-array>

    <string-array name="notifications_options">
        <item>Car Wash</item>
        <item>Change Tires</item>
        <item>Engine Oil</item>
        <item>Inspection</item>
        <item>Other repair</item>
    </string-array>

    <string-array name="recurring_options">
        <item>1 week</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>4 months</item>
        <item>5 months</item>
        <item>6 months</item>
        <item>7 months</item>
        <item>8 months</item>
        <item>9 months</item>
        <item>10 months</item>
        <item>11 months</item>
        <item>12 months</item>
    </string-array>

    <string name="account_informtation">Account information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="delete_account">Delete Account</string>
    <string name="notification">Notification</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="reccuring_notifcation">Recurring notification every</string>
    <string name="deadline">Deadline</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="year_of_manufacture">Year of manufacture</string>
    <string name="odometer">Odometer</string>
    <string name="fuel_type">Fuel type:</string>
    <string name="notes">Notes</string>
    <string name="contact">Contact</string>
    <string name="app_made_by">App made by: Peter Szepesi</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="app_version">App version: 1.0</string>
    <string name="expense">Expense</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="cost">Cost</string>
    <string name="refuel">Refuel</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account? Register now! </string>
    <string name="register">Register</string>
    <string name="my_cars">My cars</string>
    <string name="notifications">Notifications</string>
    <string name="kilometers">Kilometers</string>
    <string name="your_username">Your username</string>
    <string name="your_password">Your new password</string>
    <string name="your_new_password">Retype your new password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="create_account">Create account</string>
    <string name="service">Service</string>
    <string name="statistics">Statistics</string>
    <string name="monthly_expenses">MONTHLY EXPENSES</string>
    <string name="monthly_fuel_costs">MONTHLY FUEL COSTS</string>
    <string name="monthly_kilometers">MONTHLY KILOMETERS</string>
    <string name="dialog_mesasge">Are you sure you want to delete your account? Enter your password to confirm.</string>
    <string name="your_name">Your Name</string>
    <string name="home">Home</string>
    <string name="My_Cars">My Cars</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="confirm">Confirm</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="cancel">Cancel</string>
    <string name="notifcation_inserted_succesfully">Notification inserted successfully</string>
    <string name="failed_to_insert_notification">Failed to insert notification</string>
    <string name="empty_field">This field cannot be empty!</string>
    <string name="car_added_successfully">Car added successfully</string>
    <string name="failed_to_add_car">Failed to add your car</string>
    <string name="year_must_be">Year must be between 1900 and</string>
    <string name="odometer_must_be">Odometer must be between 0 and 1,000,000</string>
    <string name="username_is_already_taken">Username is already taken</string>
    <string name="week_1">1 week</string>
    <string name="month_1">1 month</string>
    <string name="month_2">2 months</string>
    <string name="month_3">3 months</string>
    <string name="month_4">4 months</string>
    <string name="month_5">5 months</string>
    <string name="month_6">6 months</string>
    <string name="month_7">7 months</string>
    <string name="month_8">8 months</string>
    <string name="month_9">9 months</string>
    <string name="month_10">10 months</string>
    <string name="month_11">11 months</string>
    <string name="month_12">12 months</string>
    <string name="expense_data_inserted_successfully">Expense data inserted successfully</string>
    <string name="expense_data_inserted_error">Error inserting expense data</string>
    <string name="refuel_data_inserted_successfully">Refuel data inserted successfully</string>
    <string name="refuel_data_inserted_error">Error inserting refuel data</string>
    <string name="diesel">Diesel</string>
    <string name="gasoline">Gasoline</string>
    <string name="electric">Electric</string>
    <string name="lpg">LPG</string>
    <string name="invalid_username_password">Invalid username or password</string>
    <string name="invalid_username_password_lenght">Invalid username or password length</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="all">All</string>
    <string name="delete_title">Delete Confirmation</string>
    <string name="are_you_sure_delete_entry">Are you sure you want to delete this entry?</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="car_deleted_successfully">Car deleted successfully</string>
    <string name="failed_to_delete_car">Failed to delete your car</string>
    <string name="are_you_sure_delete_car">Are you sure you want to delete your car?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="car_upadted_successfully">Car data updated successfully</string>
    <string name="car_updated_error">Failed to update car data</string>
    <string name="car">Car:</string>
    <string name="service_type">Service Type:</string>
    <string name="description_1">Description:</string>
    <string name="location_1">Location:</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="odometer_inserted_successfully">Odometer data inserted successfully</string>
    <string name="odometer_updating_error">Error updating odometer value</string>
    <string name="odometer_inserted_error">Error inserting odometer data</string>
    <string name="service_inserted_successfully">Service data inserted successfully</string>
    <string name="service_inserted_error">Error inserting service data</string>
    <string name="invalid_username">Invalid username</string>
    <string name="password_must_be">Password must be at least 8 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_reset_successfully">Password reset successfully</string>
    <string name="username_does_not_exists">Username does not exists</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="registration_failed">Registration failed</string>
    <string name="invalid_username_lenght">Username must be at least 8 characters long</string>
    <string name="invalid_password_lenght">Password must be at least 8 characters long</string>
    <string name="invalid_first_name">First name can not have numbers or special characters</string>
    <string name="invalid_lastname_name">Last name can not have numbers or special characters</string>
    <string name="invalid_username_length">Username must have at least 8 characters</string>
    <string name="invalid_password_length">Password must have at least 8 characters</string>


</resources>