<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
            />

        <item android:id="@+id/contact"
            android:icon="@drawable/baseline_local_phone_24"
            android:title="@string/contact"
            />
    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/cars"
                    android:icon="@drawable/baseline_directions_car_24"
                    android:title="@string/My_Cars"
                    />

                <item android:id="@+id/about"
                    android:icon="@drawable/baseline_account_circle_24"
                    android:title="@string/about"
                    />

                <item android:id="@+id/logout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/logout"
                    />
            </group>
        </menu>
    </item>
</menu>