<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/appLogo"
            android:layout_width="351dp"
            android:layout_height="255dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appLogo"
            android:textCursorDrawable ="@drawable/custom_cursor"
            app:boxStrokeColor="#4a5f79"
            app:hintTextColor="#4a5f79"
            android:layout_marginTop="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:textCursorDrawable ="@drawable/custom_cursor"
                android:backgroundTint="#4a5f79"
                app:hintTextColor="#4a5f79"
               />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:boxStrokeColor="#4a5f79"
            app:hintTextColor="#4a5f79"
            android:textCursorDrawable ="@drawable/custom_cursor"
            app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="#4a5f79"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            app:boxStrokeColor="#4a5f79"
            android:textColor="#4a5f79"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onForgotPasswordClick"
            tools:ignore="MissingConstraints">
        </TextView>



        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/secondary_color"
            app:layout_constraintTop_toBottomOf="@id/rememberMeCheckBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/app_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/secondary_color"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/app_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>