<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="#000000"
            android:textSize="23sp"
            tools:ignore="MissingConstraints"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccount"
            android:layout_marginTop="50dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            app:expandedHintEnabled="false"
            android:textCursorDrawable ="@drawable/custom_cursor"
            app:hintTextColor="@color/secondary_color"
            app:boxStrokeColor="@color/secondary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text"
                app:hintTextColor="@color/secondary_color"
                android:textCursorDrawable ="@drawable/custom_cursor"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:maxLength="30"
                android:backgroundTint="@color/secondary_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            app:hintTextColor="#4a5f79"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstNameInputLayout"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            app:expandedHintEnabled="false"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="#4a5f79">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textCursorDrawable ="@drawable/custom_cursor"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:hintTextColor="@color/secondary_color"
                android:maxLength="30"
                android:backgroundTint="@color/secondary_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastNameInputLayout"
            android:textCursorDrawable ="@drawable/custom_cursor"
            android:layout_marginTop="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/secondary_color"
            app:boxStrokeColor="@color/secondary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:maxLength="30"
                android:textCursorDrawable ="@drawable/custom_cursor"
                app:hintTextColor="@color/secondary_color"
                android:backgroundTint="@color/secondary_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
            android:layout_marginTop="20dp"
            app:hintTextColor="@color/secondary_color"
            app:passwordToggleEnabled="true"
            android:textCursorDrawable ="@drawable/custom_cursor"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            app:expandedHintEnabled="false"
            app:boxStrokeColor="@color/secondary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:maxLength="30"
                android:textCursorDrawable ="@drawable/custom_cursor"
                android:backgroundTint="@color/secondary_color"
                app:hintTextColor="@color/secondary_color"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            app:layout_constraintStart_toStartOf="parent" />



        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/createAccount"
            app:srcCompat="@drawable/baseline_arrow_back_ios_new_24">

        </ImageButton>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/secondary_color"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/app_color" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>