<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/creatorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutYou"
            android:text="@string/app_made_by"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#4a5f79
" />

        <TextView
            android:id="@+id/contactTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/contact"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/creatorTextView"
            android:layout_marginTop="20dp"
            android:backgroundTint="#4a5f79
" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactTextView"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="25sp"
                android:textColor="#000000"
                android:backgroundTint="@color/background_app"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberInputLayout"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="22sp"
                android:textColor="#000000"
                android:backgroundTint="#4a5f79"
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/appVersionInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/appVersionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="25sp"
                android:textColor="#000000"
                android:backgroundTint="#4a5f79"
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/aboutYou"
            app:srcCompat="@drawable/baseline_arrow_back_ios_new_24">

        </ImageButton>

        <TextView
            android:id="@+id/aboutYou"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="#000000"
            android:textSize="23sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>